# shadcn-admin

api/: .gitignore  README.md  pyproject.toml
api/app/core/: security.py
ui/: package-lock.json
ui/src/features/users/components/: users-action-dialog.tsx  users-delete-dialog.tsx  users-multi-delete-dialog.tsx
ui/src/features/users/hooks/: use-users-query.ts
ui/src/lib/api/: auth.ts  users.ts
