[project]
name = "shadcn-admin-api"
version = "1.0.0"
description = "FastAPI backend for Shadcn Admin Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.18",
    "pydantic[email]==2.10.3",
    "python-dotenv==1.0.1",
    "fastapi-cors==0.0.6",
    "pydantic-settings==2.6.1",
    "bcrypt==5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
